Kubernetes/applications/registry/harbor1.2.0/kubernetes/harbor-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: harbor-ingress
 annotations:
  nginx.ingress.kubernetes.io/affinity: "cookie"
  nginx.ingress.kubernetes.io/session-cookie-name: "harbor"
  nginx.ingress.kubernetes.io/session-cookie-hash: "sha"
  nginx.ingress.kubernetes.io/proxy-body-size: 20480m


spec:
 tls:
 - hosts:
   - registry.gcsc.lmy.corp
   secretName: registry-secret
 rules:
   - host: registry.gcsc.lmy.corp
     http:
       paths:
         - path: /
           backend:
             serviceName: ui
             servicePort: 80
         - path: /v2
           backend:
             serviceName: registry
             servicePort: 5000
